fitting/3B/h2oh2ox/4thorder/src/output
g++ -Wall -g -O2 -m64 -I/opt/intel/mkl/include   -c -o x3b-h2o-ion-base.o x3b-h2o-ion-base.cpp
x3b-h2o-ion-base.cpp: In member function ‘double h2o_ion::x3b_h2o_ion_base::Eind3(const double*) const’:
x3b-h2o-ion-base.cpp:119:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < system.size(); i++) {
                                     ^
x3b-h2o-ion-base.cpp:130:36: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i = 0; i < system.size(); i++) {
                                    ^
g++ -Wall -g -O2 -m64 -I/opt/intel/mkl/include   -c -o x3b-h2o-ion-v1.o x3b-h2o-ion-v1.cpp
g++ -Wall -g -O2 -m64 -I/opt/intel/mkl/include   -c -o ion.o ion.cpp
ion.cpp: In member function ‘virtual std::set<std::pair<long unsigned int, long unsigned int> >::iterator ion::ion::get_begin_12()’:
ion.cpp:90:56: warning: no return statement in function returning non-void [-Wreturn-type]
     excluded_set_type::iterator ion::get_begin_12() {  }
                                                        ^
ion.cpp: In member function ‘virtual std::set<std::pair<long unsigned int, long unsigned int> >::iterator ion::ion::get_begin_13()’:
ion.cpp:91:56: warning: no return statement in function returning non-void [-Wreturn-type]
     excluded_set_type::iterator ion::get_begin_13() {  }
                                                        ^
ion.cpp: In member function ‘virtual std::set<std::pair<long unsigned int, long unsigned int> >::iterator ion::ion::get_end_12()’:
ion.cpp:92:54: warning: no return statement in function returning non-void [-Wreturn-type]
     excluded_set_type::iterator ion::get_end_12() {  }
                                                      ^
ion.cpp: In member function ‘virtual std::set<std::pair<long unsigned int, long unsigned int> >::iterator ion::ion::get_end_13()’:
ion.cpp:93:54: warning: no return statement in function returning non-void [-Wreturn-type]
     excluded_set_type::iterator ion::get_end_13() {  }
                                                      ^
g++ -Wall -g -O2 -m64 -I/opt/intel/mkl/include   -c -o poly-3b-h2o-ion-v1x.o poly-3b-h2o-ion-v1x.cpp
g++ -DFLUORIDE -o test-x3b test-x3b.cpp -Wall -g -O2 -m64 -I/opt/intel/mkl/include -lnetcdf -lgsl -lgslcblas -L/opt/intel/lib/intel64 -L/opt/intel/mkl/lib/intel64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread io-xyz.o rwlsq.o stuff.o training-set-h2o-ion.o wlsq.o x3b-h2o-ion-base.o x3b-h2o-ion-v1.o electrostatics.o coulomb.o ion.o ttm4.o gammq.o ps.o poly-3b-h2o-ion-v1x.o 
test-x3b.cpp: In function ‘int main(int, char**)’:
test-x3b.cpp:22:12: warning: unused variable ‘ntrimers’ [-Wunused-variable]
     size_t ntrimers = h2o_ion::load_trimers(argv[1], training_set);
            ^
mkdir -p ../bin
mv test-x3b ../bin
g++ -Wall -g -O2 -m64 -I/opt/intel/mkl/include   -c -o fit-x3b-h2o-ion-v1.o fit-x3b-h2o-ion-v1.cpp
fit-x3b-h2o-ion-v1.cpp: In function ‘int main(int, char**)’:
fit-x3b-h2o-ion-v1.cpp:246:37: error: ‘E_range’ was not declared in this scope
     std::cout << ">> E_range = " << E_range << std::endl;
                                     ^
make: *** [fit-x3b-h2o-ion-v1.o] Error 1
